<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="258dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/mail"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:text=""
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/pass"
            android:backgroundTint="@color/cyan"
            android:ems="10"
            android:hint="@string/pass"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/cyan"
            android:text="@string/btnlogin" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="add"
        android:text="@string/btnloginGoogle"
        android:textColor="@color/black"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconTint="#F5000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#9CB69696"
        tools:text="@string/btnloginGoogle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#4825445C"
        android:contentDescription="@string/perfilImage"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="165dp"
        android:layout_height="26dp"
        android:text="@string/red_social"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

</androidx.constraintlayout.widget.ConstraintLayout>